--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,22 @@
 {
-  "name": "Sizning App nomi",
-  "short_name": "AppShort",
-  "description": "Bu — mening HTML/CSS/JS loyiham, endi PWA sifatida ishlaydi.",
-  "start_url": "/?source=pwa",
-  "scope": "/",
+  "name": "Martian Menu",
+  "short_name": "Menu",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#0ea5a4",
+  "theme_color": "#222222",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
 }
+
